--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.32",
+    "gatsby-source-contentful": "^2.1.51",
     "gatsby-source-filesystem": "^2.1.33",
+    "gatsby-transformer-remark": "^2.6.32",
     "gatsby-transformer-sharp": "^2.3.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
