Day27 complete comment and build

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "homepage": "https://github.com/linsheng24/gatsby-blog",
   "dependencies": {
     "@primer/css": "^13.1.0",
     "bootstrap": "^4.3.1",
     "bootstrap-sass": "^3.4.1",
+    "contentful": "^7.10.0",
+    "contentful-management": "^5.11.3",
     "gatsby": "^2.17.4",
     "gatsby-image": "^2.2.29",
     "gatsby-plugin-manifest": "^2.2.23",
@@ -19,6 +22,7 @@
     "gatsby-source-filesystem": "^2.1.33",
     "gatsby-transformer-remark": "^2.6.32",
     "gatsby-transformer-sharp": "^2.3.0",
+    "gh-pages": "^2.1.1",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
@@ -33,6 +37,7 @@
   ],
   "license": "MIT",
   "scripts": {
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
